examples/test/testpolicy14047.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14047
  namespace: namespace194
spec:
  podSelector:
    matchLabels:
      key30: value48
      key11: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value26
          key38: value1
      podSelector:
        matchLabels:
          key40: value5
          key38: value3
          key20: value17
